# ham

./: AI_Interface.py  AI_context.py  ServerMJPEG.py  TaskManager.py  __init__.py  cam_context.py  config.txt  face_utils.py  get_condir.py  main_AI  main_AI.py  note.txt  note1.txt  plate_test_cpp.py  redis_client.py  requirements_.txt  run.py  test.py  test_shm.py
LP_detect_module/: CMakeLists.txt  FaceDetect.py  Makefile
LP_detect_module/bk/: makefile
LP_detect_module/build_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
LP_detect_module/cpp/: common.h  face_detect.h  face_detect_retinaTRT.cpp
LP_detect_module/cpp/sort_tracking/: Hungarian.h  KalmanTracker.cpp  KalmanTracker.h
LP_detect_module/test_cpp/: run_test
License_Plate/: main.py
License_Plate/PaddleOCR/ppocr/utils/: rec_lp_lite_48x160_only_reg_plate.txt
License_Plate/PaddleOCR/tools/infer/: include_align.py  predict_rec.py  predict_system.py  system_minh.py  utility.py
License_Plate/include/: model_PaddleOCR.py  models_retina.py  onebatch.py
License_Plate/retinaface/data_retinaface/: config.py  data_augment.py  train_scrfd.txt  val_scrfd.txt
License_Plate/retinaface/layers_retinaface/modules/: multibox_loss.py
License_Plate/retinaface/models_retinaface/: net.py  retinaface.py
License_Plate/retinaface/weights_retinaface/data_extend_tri_tu_Minh29_9_final/: mobilenet0.25_epoch_235.pth
License_Plate/sort/: sort.py
config/: MobileNetV1_multilabel.yaml  config_FaceRetina.txt  config_LP.yaml  config_TBA.yaml  config_belt.yaml  config_camera.yaml  config_fence.yaml  config_license_plate.yaml  config_main_include.yaml  config_tunnel.yaml
face_detect_module/: AI_Interface.py  FaceDetect.i  SHMReader_3.py  main.py
face_detect_module/bk/: objects.mk  subdir.mk
face_detect_module/build_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
face_detect_module/cpp/: face_detect_retinaTRT.cpp
face_detect_module/cpp/retinaTRT_face/: retinaface.hpp
face_detect_module/cpp/sort_tracking/: sort_tracking.cpp  sort_tracking.h
face_detect_module/test_cpp/: Makefile  main.cpp
include/: CheckSort.py  __init__.py  backgroud_subtration_hoabinh.py  config.yaml  event.py  get_output.py  helmet_processes.py  include_main.py  load_model.py  main.py  model_paddle_class.py  personFalse.py  personHoldThing.py  personHoldThingDetect.py  personbelt.py  roi.py  yolo.py
output/: 12.avi  24.avi
shm/: SHM.py  SHMReader.py  SHMReader_2.py  SHMReader_3.py
sort/: sort.py  sort1.py  sort2.py
